added comments to code

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
 
         </div>
         <div class="row">
-            <div class="card mx-auto">
+            <div class="card mx-auto mb-5">
                 <div class="card-header">
                     <h3>Using Math Functions</h3>
                 </div>
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="card mx-auto">
+            <div class="card mx-auto mb-5">
                 <div class="card-header">
                     <h3>Using Array Sort</h3>
                 </div>
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="row ">
-            <div class="card mx-auto">
+            <div class="card mx-auto mb-5">
                 <div class="card-header">
                     <h3>Using Array Custom Sort Algorithm</h3>
                 </div>
