--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
     <div class="container">
         <header>
             <h1 class="text-center">Find the Min, Max, and Average</h1>
+            <a href="/minmaxavg-react">Try the React version</a>
         </header>
         <div class="row mb-5">
             <div class="mx-auto" style="width: 40rem;">
