fix the link to center

--- a/client/index.html
+++ b/client/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <div class="container">
-        <header>
-            <h1 class="text-center">Find the Min, Max, and Average</h1>
+        <header class="text-center">
+            <h1>Find the Min, Max, and Average</h1>
             <a href="/minmaxavg-react">Try the React version</a>
         </header>
         <div class="row mb-5">
